# notify_queue

./: .env.example  .gitignore  DESIGN.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: 001_initial.sql
scripts/: seed.py  simulate.py
src/notify_queue/: __init__.py  config.py  db.py  dlq.py  log.py  models.py  ratelimit.py  redis_client.py  webhooks.py
src/notify_queue/api/: __init__.py  app.py  routes.py
src/notify_queue/scheduler/: __init__.py  __main__.py  scheduler.py
src/notify_queue/worker/: __init__.py  __main__.py  claim.py  delivery.py  heartbeat.py
tests/: conftest.py  test_api.py  test_claim.py  test_exactly_once.py  test_idempotency.py  test_ratelimit.py  test_recovery.py  test_retry_and_dlq.py  test_scheduler.py
web/: app.js  index.html  style.css
